app/assets/stylesheets/api/create/create.scss
.project-create-form {
  background-image: url(http://res.cloudinary.com/ds1qfel8a/image/upload/c_scale,w_1920/v1495331172/create_bg_ubhjhl.jpg);
  opacity: 0.9;
  padding: 50px 0;
}

.create-header {
  text-align: center;
  font-size: 20px;
}

.create-header h1 {
  font-size: 30px;
  font-weight: bold;
  margin-bottom: 20px;
}

.project-create-form > * {
  margin: 0 20%;
}

.create-form-contents {
  margin-top: 50px;
  display: flex;
  flex-direction: column;
  background-color: white;
}

.create-form-contents p {
  display: flex;
  background-color: #F8F9FD;
  margin: 15px;
  padding: 10px;
}

.create-form-contents p > * {
  border: 1px solid gray;
  border-radius: 3px;
  padding: 10px;
  font-size: 13px;
}

.create-form-contents p span {
  width: 25%;
  border: none;
  font-size: 15px;
  font-weight: bold;
}

.create-form-contents input, textarea {
  width: 75%;
  resize: none;
}

.create-form-contents select {
  width: 75%;
}

.create-form-contents input[type="submit"] {
  width: 150px;
  text-align: center;
}

.form-description {
  height: 70px;
  vertical-align: top;
}

